2008-01-09  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Removed a call to isPowerOf() because it is no longer necessary here
	and a request block is not always power of 2.
	BUG#1866924
	* src/PeerMessageUtil.cc (checkLength)

2008-01-07  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed the bug that always first found Segment is removed from
	usedSegmentEntries. Removed unused functions.
	* src/SegmentMan.{h, cc}
	* test/SegmentManTest.cc

	Fixed the bug that ServerHost is not removed.
	* src/RequestGroup.cc
	
2008-01-07  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed the bug that SegmentMan::completeSegment() is not called
	even if Segment is complete when --lowest-speed-limit is enabled.
	BUG#1864525
	* src/DownloadCommand.{h, cc}

2008-01-06  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed: hash algorithm 'sha1' is always used. 
	* src/DownloadCommand.cc (validatePieceHash) 

2008-01-06  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added --enable-peer-exchange command-line option.
	* src/OptionHandlerFactory.cc
	* src/HelpItemFactory.cc
	* src/option_processing.cc
	* src/usage_text.h

2008-01-06  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Move extension from BtRuntime to ExtensionMessageFactory, because
	extension can be specified per peer, not per torrent.
	* src/DefaultBtInteractive.cc
	* src/BtRuntime.h
	* src/ExtendedMessagingAware.h
	* src/ExtensionMessageFactory.h
	* src/DefaultExtensionMessageFactory.cc
	* test/DefaultExtensionMessageFactoryTest.cc

2008-01-05  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added categorized option help. Specify category using --help option.
	Also added the ability to search options in forward match.
	* src/HelpItem.{h, cc}
	* test/HelpItemTest.cc
	* src/HelpItemFactory.{h, cc}
	* src/TagContainer.{h, cc}
	* test/TagContainerTest.cc
	* src/option_processing.cc
	* src/prefs.h
	* src/TaggedItem.{h, cc}
	* test/TaggedItemTest.cc
	* src/version_usage.cc